organized depedencies, changed project metadata to "boulderingdb"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=springboot
 
 # Mysql Database Setup
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot
+spring.datasource.url=jdbc:mysql://localhost:3306/boulderingdb
 spring.datasource.username=root
 spring.datasource.password=MySQL01!
 
