ignoring test images

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@ build/
 ### VS Code ###
 .vscode/
 69622907420__451E05E2-462E-4A3A-B09C-D0AFB4A7D656.jpeg
+01A13FDB-28E4-42BB-B07D-B55A69DE6092.jpeg
+1C211414-8677-44BB-8825-FDFD71B3BCA2.jpeg
+FullSizeRender (1).jpg
+FullSizeRender.jpg
+IMG_0999.jpeg
+IMG_1001.jpeg
